# tts3x

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
config/: explained_prompts.example.json  pronunciation.example.json
docs/: ARCHITECTURE.md
src/tts3x/: __init__.py  api.py  cli.py  pipeline.py
tests/: test_captions_verify.py  test_pipeline_core.py  test_prompt_profiles.py  test_speakable_v2.py
